# wol.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile
.forgejo/workflows/: ci.yaml
.github/workflows/: ci.yml  release.yml
src/: file.rs  lib.rs  main.rs
supply-chain/: audits.toml  config.toml
