[package]
name = "wol"
version = "0.2.0"
description = "Wake up remote hosts with Wake On LAN magic packets"
homepage = "https://github.com/swsnr/wol"
readme = "README.md"
license = "MPL-2.0"
keywords = ["WakeOnLan", "magic-packet", "WOL", "SecureON"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2024"

[features]
cli = ["dep:clap"]

[[bin]]
name = "wol"
required-features = ["cli"]

[dependencies]
macaddr = "1.0.1"
# Optional dependencies for CLI
clap = { version = "4.5.32", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
], optional = true }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
# Github Actions does this for us
verify = false
# The release workflow does this for us
publish = false
# We push commit and tag separately to make sure the release workflow only runs
# if the pipeline's good; release tag rules will prevent us from pushing a tag
# for a commit which is not green
push = false
