[package]
name = "wol"
version = "0.3.1"
description = "Wake up remote hosts with Wake On LAN magic packets"
homepage = "https://codeberg.org/swsnr/wol"
readme = "README.md"
license = "MPL-2.0"
keywords = ["WakeOnLan", "magic-packet", "WOL", "SecureON"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
edition = "2024"
rust-version = "1.85"

[features]
# Build the CLI tool
cli = ["dep:clap"]
# Include the manpage in the CLI tool, behind a --print-manpage flag
manpage = ["dep:clap_mangen"]
# Include shell completions in the CLI tool, behind a --print-completions flag
completions = ["dep:clap_complete"]

[[bin]]
name = "wol"
required-features = ["cli"]

[dependencies]
macaddr = "1.0.1"
# Optional dependencies for CLI
clap = { version = "4.5.32", default-features = false, features = [
    "std",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
    "wrap_help",
], optional = true }
clap_mangen = { version = "0.2.26", optional = true }
clap_complete = { version = "4.5.47", optional = true }

[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-prefix = ""
tag-message = "Version {{tag_name}}"
pre-release-replacements = [
    # Update the changelog
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] – {{date}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "HEAD", replace = "{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "\\[Unreleased\\]: ", replace = "[Unreleased]: https://codeberg.org/swsnr/wol.rs/compare/{{tag_name}}...HEAD\n[{{version}}]: ", exactly = 1 },
]
